fix styling on timeframe buttons to prevent css shifting

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -55,6 +55,7 @@
     padding-bottom: 12px;
     padding-top: 20px;
     font-size: 12px;
+    height: 14px;
 }
 
 .portfolio-buttons > button:hover {
